@@ -1,5 +1,10 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* tests/test-setexp.c: New file: setexpd[32|64|128] testcase.
+	* Makefile.in: Add setexp testcase rules.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* tests/test-getexp.c: Add _Decimal32 and _Decimal128 tests and remove
 	check for infinity for _Decimal64.
 
